istioctl/cmd/istioctl/testdata/genbinding/egress-gateway-ip.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  creationTimestamp: null
  name: service-entry-reviews
  namespace: default
spec:
  addresses:
  - 127.255.214.91
  endpoints:
  - address: 1.2.3.4
    labels:
      network: external
    ports:
      http: 15443
  - address: 6.7.8.9
    ports:
      http: 15443
  hosts:
  - reviews
  location: MESH_INTERNAL
  ports:
  - name: http
    number: 9080
    protocol: HTTP
  resolution: DNS
