istioctl/cmd/istioctl/testdata/genbinding/ratings-v1-i586.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  creationTimestamp: null
  name: service-entry-ratings
  namespace: default
spec:
  endpoints:
  - address: 1.2.3.4
    labels:
      arch: i586
      version: v1
    ports:
      http: 15443
  hosts:
  - ratings
  location: MESH_INTERNAL
  ports:
  - name: http
    number: 8080
    protocol: HTTP
  resolution: DNS
