istioctl/cmd/istioctl/testdata/genbinding/reviews-1234-vip.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  creationTimestamp: null
  name: service-entry-reviews.default.global
  namespace: default
spec:
  addresses:
  - 6.7.8.9
  endpoints:
  - address: 1.2.3.4
    ports:
      http: 15443
  hosts:
  - reviews.default.global
  location: MESH_INTERNAL
  ports:
  - name: http
    number: 9080
    protocol: HTTP
  resolution: DNS
