istioctl/cmd/istioctl/testdata/genbinding/reviews-1234.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  creationTimestamp: null
  name: service-entry-reviews
  namespace: default
spec:
  addresses:
  - 127.255.214.91
  endpoints:
  - address: 1.2.3.4
    ports:
      http: 5
  hosts:
  - reviews
  location: MESH_INTERNAL
  ports:
  - name: http
    number: 9080
    protocol: HTTP
  resolution: DNS
