istioctl/cmd/istioctl/testdata/genbinding/reviews-2remotes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  creationTimestamp: null
  name: service-entry-reviews
  namespace: default
spec:
  endpoints:
  - address: 1.2.3.4
    ports:
      http: 5
  - address: 6.7.8.9
    ports:
      http: 10
  hosts:
  - reviews
  location: MESH_INTERNAL
  ports:
  - name: http
    number: 9080
    protocol: HTTP
  resolution: DNS
