istioctl/cmd/istioctl/testdata/genbinding/reviews-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  creationTimestamp: null
  name: service-entry-reviews.default.global
  namespace: default
spec:
  endpoints:
  - address: 1.2.3.4
    labels:
      version: v1
    ports:
      http: 15443
  hosts:
  - reviews.default.global
  location: MESH_INTERNAL
  ports:
  - name: http
    number: 9080
    protocol: HTTP
  resolution: DNS
